fixed spacing and sizing on landingpage

--- a/public/less/bootstrap/variables.less
+++ b/public/less/bootstrap/variables.less
@@ -365,7 +365,7 @@
 // Jumbotron
 // -------------------------
 
-@jumbotron-padding:              30px;
+@jumbotron-padding:              80px;
 @jumbotron-color:                inherit;
 @jumbotron-bg:                   @gray-lighter;
 @jumbotron-heading-color:        inherit;
